# elfexec

./: .gitignore  CMakeLists.txt  test  test.s
include/: logging.hpp
include/elf/: elf.hpp  pie.hpp
include/emu/: arch.hpp  crash_reporter.hpp  emulator.hpp  opcodes.hpp
include/emu/opcodes/: fs.hpp  io.hpp  memory.hpp  process.hpp
src/: logging.cpp  main.cpp
src/elf/: elf.cpp  pie.cpp
src/emu/: arch.cpp  crash_reporter.cpp  emulator.cpp  opcodes.cpp
src/emu/opcodes/: fs.cpp  io.cpp  memory.cpp  process.cpp
